DT-2166  Fix image alignment of images

--- a/extended/widgets/image.less
+++ b/extended/widgets/image.less
@@ -36,7 +36,6 @@
         }
 
         .image-img {
-            display: inline-block;
             max-width: 100%;
         }
 
